Suite du projet black panther

--- a/wakanda.html
+++ b/wakanda.html
@@ -5,63 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wakanda black panther</title>
-    <link rel="stylesheet" href="wakanda.css">
+    <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
-    <header>
-        <nav class="container">
-            <a href="wakanda.html">
-              <img src="/Illustrations + Logo/All pages/footer2.png" alt="Logo">
-            </a>
-            <ul>
-              <li><a href="wakanda.html">Accueil</a></li>
-              <li><a href="#">Wakanda</a></li>
-              <li><a href="#">Enigeme</a></li>
-            </ul>
-          </nav>
-    </header>
-    <main>
-    <section id="Wakanda">
-        <div class="container">
-            <img src="/Illustrations + Logo/Wakanda/Pantherwakanda1.png" alt="">
-            <div>
+   <header>
+      <nav class="header">
+        <a href="accueil.html">
+          <img src="./Images/All_pages/footer2.png" alt="Logo">
+        </a>
+        <ul class="menu">
+          <li><a href="accueil.html">Accueil</a></li>
+          <li><a href="#">Wakanda</a></li>
+          <li><a href="#">Enigme</a></li>
+        </ul>
+      </nav>
+  </header>
+    
+    <main class="main-wakanda">
+         <div class="section1">
+            <div class="section1-text">
                 <h1>WAKANDA FOREVER</h1>
                 <h2>WAKANDA FOREVER</h2>
-                <p>
+                <p class="text">
                   Situé  en  Afrique  subsaharienne,  à  l'ouest  de  l’Éthiopie  et  au  nord  du 
                   Kenya1, ce petit royaume, longtemps caché aux autres nations du monde, 
                   est notamment connu pour posséder un gisement naturel du métal de 
                   fiction le vibranium ainsi que pour son dirigeant, le monarque et superhéros appelé la Panthère noire.
                 </p>
             </div>
-            <img src="/Illustrations + Logo/Wakanda/Pantherwakanda2.png" alt="">
-            <div>
-                 <div>
-                     <h3>Origines</h3>
-                     <p>Avant l'émergence de la nation wakandaise, la mythologie du pays parle des êtres mystiques connus sous 
-                        le nom des « Originateurs », expulsés de la région par les Orishas, le panthéon du Wakanda composé des 
-                        dieux Thot, Ptah, Mujaji, Kokou et Bast la déesse panthère.
-                     </p>
-                     <p>La lignée royale du Wakanda débute avec Bashenga, supposé être le troisième prince du pays et la 
-                        première Panthère noire (Black Panther), 10 000 ans avant T'Challa.
-                     </p>
-                     <p>Dans l'histoire lointaine du royaume, une immense météorite s’écrasa sur le futur Wakanda et provoqua 
-                        la survenue d'une substance unique, qui deviendra plus tard le vibranium. Les Wakandais apprendront au 
-                        fur et à mesure à utiliser ce métal pour forger leurs armes. Mais le vibranium se révélera aussi avoir de 
-                        fortes propriétés mutagènes qui transformeront certaines hommes en monstres.
-                     </p>
-                     <p>
-                        Le bouclier de Captain America (ère moderne) est composé en partie de vibranium du Wakanda.
-                        Entouré de montagnes, les frontières du Wakanda ont été soigneusement surveillées au cours des deux 
-                        derniers siècles, et toute tentative d’invasion a été repoussée. Jusqu’à ces dernières années, le pays était si 
-                        isolé que la plupart des personnes sur Terre ignoraient son existence.
-                     </p>
-                     <p>
-                        Lorsque des informations sur la présence de vibranium au Wakanda commencèrent à se répandre durant 
-                        la Seconde Guerre mondiale, le roi T’Chaka passa un accord avec Captain America (Steve Rogers), lui 
-                        fournissant un échantillon de vibranium — qui allait être utilisé peu de temps après par le métallurgiste 
-                        américain Myron MacLain  pour former le bouclier rond du Captain.</p>
-
+         <div>
+         <div class="section2">
+            <div class="left">
+                <div class="section2-text">
+                   <h3>Origines</h3>
+                   <p>Avant l'émergence de la nation wakandaise, la mythologie du pays parle des êtres mystiques connus sous 
+                     le nom des « Originateurs », expulsés de la région par les Orishas, le panthéon du Wakanda composé des 
+                     dieux Thot, Ptah, Mujaji, Kokou et Bast la déesse panthère.
+                   </p>
+                   <p>La lignée royale du Wakanda débute avec Bashenga, supposé être le troisième prince du pays et la 
+                     première Panthère noire (Black Panther), 10 000 ans avant T'Challa.
+                   </p>
+                   <p>Dans l'histoire lointaine du royaume, une immense météorite s’écrasa sur le futur Wakanda et provoqua 
+                     la survenue d'une substance unique, qui deviendra plus tard le vibranium. Les Wakandais apprendront au 
+                     fur et à mesure à utiliser ce métal pour forger leurs armes. Mais le vibranium se révélera aussi avoir de 
+                     fortes propriétés mutagènes qui transformeront certaines hommes en monstres.
+                   </p>
+                   <p>Le bouclier de Captain America (ère moderne) est composé en partie de vibranium du Wakanda.
+                     Entouré de montagnes, les frontières du Wakanda ont été soigneusement surveillées au cours des deux 
+                     derniers siècles, et toute tentative d’invasion a été repoussée. Jusqu’à ces dernières années, le pays était si 
+                     isolé que la plupart des personnes sur Terre ignoraient son existence.
+                   </p>
+                   <p>Lorsque des informations sur la présence de vibranium au Wakanda commencèrent à se répandre durant 
+                     la Seconde Guerre mondiale, le roi T’Chaka passa un accord avec Captain America (Steve Rogers), lui 
+                     fournissant un échantillon de vibranium — qui allait être utilisé peu de temps après par le métallurgiste 
+                     américain Myron MacLain  pour former le bouclier rond du Captain.
+                   </p>  
+                </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/gMLh7wS5Dsw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                </iframe>
+                <div class="section2-text">
                      <h3>UN CINEMA AFRO AMERICAIN QUI RESONNE</h3>
                      <p> 
                         Pour Jamil Smith dans le magazine Time, Black Panther semble capable de prouver à Hollywood que les 
@@ -105,10 +107,10 @@
                         que  sur  le  Mont  Kanda.  Le  futur  souverain  doit  manger  cette  plante,  qui  lui  apporte  des  capacités 
                         surhumaines et un lien « mystique » avec le Dieu-Panthère.
                      </p>
-                     <iframe width="560" height="315" src="https://www.youtube.com/embed/gMLh7wS5Dsw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-                     </iframe>
                  </div>
-                 <div>
+            </div>
+            <div class="right">
+                 <div class="section2-text">
                      <h3>Le culte de la panthere noire</h3>
                      <p>
                          Bast,  la  déesse  panthère  basée  sur  Bastet,  l'ancienne  divinité  égyptienne  est  la  principale  divinité  du 
@@ -117,9 +119,9 @@
                          surhumaines et un lien « mystique » avec le Dieu-Panthère.
                      <p>
                          Par contre, le culte du Gorille — repris par M’Baku, alias l'Homme-singe — est interdit
-                    </p>
-                 </div>
-                 <div>
+                     </p>
+                  </div>
+                  <div class="section2-text">
                       <h3>Guerre de l’INFINI</h3>
                       <p>
                          Après l’arrestation et l’emprisonnement du Zemo, T’Challa emmène Steve Rogers et Barnes au Wakanda, 
@@ -139,8 +141,8 @@
                          Bien ... Nous avons du sang à revendre. »
                          T'Challa et Proxima Midnight
                       </p>
-                 </div>
-                 <div>
+                  </div>
+                  <div class="section2-text">
                       <h3>Force militaire</h3>
                       <p>
                          Le Wakanda possède sûrement une des plus puissantes armées au monde, des mesures ayant été prises 
@@ -148,16 +150,16 @@
                          d'autres nations. Le pays possède des forces spécialisées comme la Garde de la Panthère (ou la « Meute 
                          des Panthères »), l'unité des « Hatut Zeraze » (ou « Chiens de Guerre ») qui formaient la police secrète du 
                          pays (« officiellement » dissoute) ou encore les « Dora Milaje », la garde personnelle du roi.
-                     </p>
-                     <p>
+                      </p>
+                      <p>
                          De nombreux pays et organisations ont toujours eu des vues sur le Wakanda, pour sa principale ressource : 
                          le vibranium. Le criminel Ulysses Klaw a ainsi monté de multiples tentatives d’invasion, tout comme l'AIM, 
                          les nazis, l’alchimiste Diablo (Esteban De Ablo), Moïse Magnum, le Maître de l'évolution ou encore la 
                          Roxxon Oil Company .
-                     </p>
-                     <img src="/Illustrations + Logo/Wakanda/Pantherwakanda2-1.png" alt="">
+                      </p>
+                     <img src="./Images/Wakanda/Pantherwakanda2-1.png" alt="">
                  </div>
-                  <div>
+                  <div class="section2-text">
                        <h3>anecdotes :</h3>
                        <p>
                          Tessa Thompson qui partage l'affiche avec Michael B. Jordan dans les films Creed et Creed 2 a fait 
@@ -165,44 +167,56 @@
                          Végéta dans l'anime Dragon Ball Z. Michael B. Jordan s'est rapproché de Ryan Coogler qui est un grand fan 
                          de  japanimation  et  qui  a  confirmé  à  l'acteur  que  l'uniforme  de  Killmonger  est  bien  un  clin  d'oeil  au 
                          personnage de Dragon Ball Z.
-                      </p>
-                      <p>
+                       </p>
+                       <p>
                          Chadwick Boseman dans le rôle titre, on retrouve Michael B. Jordan, Lupita Nyong'o, Forest Whitaker, 
                          Danai Gurira, Sterling K. Brown ou Daniel Kaluuya. Un casting à 90% noir. On peut compter dans les 10% 
                          restants les présences d'Andy Serkis (déjà vu au Wakanda dans Avengers 2) ou de Martin Freeman, 
                          reprenant son rôle d'agent gouvernemental de Civil War.
-                      </p>
-                      <p>
+                       </p>
+                       <p>
                          Dans les flashbacks Denzel Whitaker incarne le jeune Zuri joué par Forest Whitaker plus vieux. Bien qu’il ait 
                          le même nom de famille que Forest Whitaker, ils n’ont aucun lien de parenté. Ils ont cependant joué un père 
                          et son fils dans The Great Debaters de Denzel Washington.
-                     </p>
-                     <p>
+                      </p>
+                      <p>
                          Lupita Nyong'o et Winston Duke, qui incarnent les personanges de Nakia and M'Baku, étaient ensemble à 
                          l'universite de Yale. Ils ont vu Avengers à sa sortie en 2012, rêvant de participer un jour à la saga superhéroïque. C'est chose faite.
-                     </p>
-                 </div>
-             </div>
-       </div>
-    </section>
-    <footer>
-      <div class="container">
-         <img src="/Illustrations + Logo/All pages/footer1.png alt="">
-         <img src="/Illustrations + Logo/All pages/footer2.png alt="">
-         <div>
-             <h2>P A G E S</h2>
-             <p>à propos
-                 Wakanda</p>
+                      </p>
+                  </div> 
+            </div>  
+        </div>
+   
+        <footer>
+         <div class="box-footer">
+            <div class="left">
+              <img class="image-footer2" src="./Images/All_pages/footer2.png" alt="">
+              <img class="image-footer1" src="./Images/All_pages/footer1.png" alt="">
+            </div>
+            <div class="right">
+               <div class="footer-content">
+                   <div class="pages">
+                      <h2>P A G E S</h2>
+                      <p>à propos <br>
+                         Wakanda</p>
+                   </div>
+                   <div class="social-media-footer">
+                      <h2>R E T R O U V E Z N O U S</h2>
+                      <a href="#"><img class="icon" src="./Images/All_pages/footer3.png" alt=""></a>
+                      <a href="#"><img class="icon" src="./Images/All_pages/footer4.png" alt=""></a>
+                      <a href="#"><img class="icon" src="./Images/All_pages/footer5.png" alt=""></a>
+                      <a href="#"><img class="icon" src="./Images/All_pages/footer6.png" alt=""></a>
+                    </div>
+               </div>
+               <div class="text-footer">
+                 <p>2022 Tous droits réservés</p>
+                 <p>Politique de confidentialité</p>
+                 <p>Conditions d’utilisation</p>
+               </div>
+            </div>
          </div>
-         <div class="social-footer">
-             <h2>R E T R O U V E Z N O U S</h2>
-             <a href="#"><img src="/Illustrations + Logo/All pages/footer3.png alt=""></a>
-             <a href="#"><img src="/Illustrations + Logo/All pages/footer4.png alt=""></a>
-             <a href="#"><img src="/Illustrations + Logo/All pages/footer5.png alt=""></a>
-             <a href="#"><img src="/Illustrations + Logo/All pages/footer6.png alt=""></a>
-         </div>
-     </div>
-     </footer>
+
+      </footer>
    </main>
 </body>
 </html>
