--- a/enigme.html
+++ b/enigme.html
@@ -8,19 +8,19 @@
     <title>Enigme black panther</title>
 </head>
 <body>
-    <header>
-        <nav class="header">
-          <a href="accueil.html">
-            <img src="./Images/All_pages/footer2.png" alt="Logo">
-          </a>
-          <ul class="menu">
-            <li><a href="accueil.html">Accueil</a></li>
-            <li><a href="#">Wakanda</a></li>
-            <li><a href="#">Enigme</a></li>
-          </ul>
-        </nav>
-    </header>
-    
+  <header>
+    <nav class="header">
+      <a href="accueil.html">
+        <img src="./Images/All_pages/footer2.png" alt="Logo">
+      </a>
+      <ul class="menu">
+        <li><a href="accueil.html">Accueil</a></li>
+        <li><a href="wakanda.html">Wakanda</a></li>
+        <li><a href="enigme.html">Enigme</a></li>
+      </ul>
+    </nav>
+ </header>
+
     <main class="main-enigme">
         <div class="section1">
             <div class="section1-image">
@@ -88,10 +88,10 @@
                       </div>
                       <div class="social-media-footer">
                          <h2>R E T R O U V E Z N O U S</h2>
-                         <a href="#"><img class="icon" src="./Images/All_pages/footer3.png" alt=""></a>
-                         <a href="#"><img class="icon" src="./Images/All_pages/footer4.png" alt=""></a>
-                         <a href="#"><img class="icon" src="./Images/All_pages/footer5.png" alt=""></a>
-                         <a href="#"><img class="icon" src="./Images/All_pages/footer6.png" alt=""></a>
+                         <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"><img class="icon" src="./Images/All_pages/footer3.png" alt=""></a>
+                         <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"><img class="icon" src="./Images/All_pages/footer4.png" alt=""></a>
+                         <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"><img class="icon" src="./Images/All_pages/footer5.png" alt=""></a>
+                         <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"><img class="icon" src="./Images/All_pages/footer6.png" alt=""></a>
                        </div>
                   </div>
                   <div class="text-footer">
