Projet Black Panther

--- a/enigme.html
+++ b/enigme.html
@@ -36,9 +36,10 @@
                     Prouve ton talent d’espion et déchiffre cette réplique d’Okoyé écrite en Wakandais,
                     et apprend par la même occasion la première valeur d’une Dora Milaje !
                  </P>
-                 <img src="./Images/Enigme/Pantherenigme2.png" alt="">
-                 <img src="./Images/Enigme/Pantherenigme3.png" alt="">
+                 <img class="image2-enigme" src="./Images/Enigme/Pantherenigme2.png" alt="">
+                 <img class="image3-enigme" src="./Images/Enigme/Pantherenigme3.png" alt="">
             </div>
+          </div>
         <div class="section2">
              <div class="section2-text">
                 <p class="citation">“ SI JE SUIS  FIDELE C’EST A CE TRONE 
@@ -65,7 +66,7 @@
                 <div class="form">
                    <h2>Alors, as tu la réponse ?</h2>
                    <form action="form" method="post">
-                       <input type="text" id="text" name="text" placeholder="Réponse">
+                       <input type="text" placeholder="Réponse">
                        <input type="submit" value="Envoyer">
                    </form>
                 </div>
