--- a/wakanda.html
+++ b/wakanda.html
@@ -36,7 +36,7 @@
          <div>
          <div class="section2">
             <div class="section2-text">
-               
+               <div class="left">
                    <h3>Origines</h3>
                    <p>Avant l'émergence de la nation wakandaise, la mythologie du pays parle des êtres mystiques connus sous 
                      le nom des « Originateurs », expulsés de la région par les Orishas, le panthéon du Wakanda composé des 
@@ -101,7 +101,8 @@
                         que  sur  le  Mont  Kanda.  Le  futur  souverain  doit  manger  cette  plante,  qui  lui  apporte  des  capacités 
                         surhumaines et un lien « mystique » avec le Dieu-Panthère. 
                      </p>
-                  
+               </div>
+               <div class="right"> 
                      <h3>Le culte de la panthere noire</h3>
                      <p>Bast,  la  déesse  panthère  basée  sur  Bastet,  l'ancienne  divinité  égyptienne  est  la  principale  divinité  du 
                         Wakanda. Chaque nouvelle Panthère noire doit partir en quête d’une herbe en forme de cœur qui ne pousse 
@@ -163,6 +164,7 @@
                       <p> Lupita Nyong'o et Winston Duke, qui incarnent les personanges de Nakia and M'Baku, étaient ensemble à 
                         l'universite de Yale. Ils ont vu Avengers à sa sortie en 2012, rêvant de participer un jour à la saga superhéroïque. C'est chose faite.
                      </p>
+               </div>        
             </div>
          </div>
    
