Projet Black Panther

--- a/accueil.html
+++ b/accueil.html
@@ -44,39 +44,39 @@
                    <img class="image1" src="./Images/Accueil/Pantherhome1..png" alt="">
             </div>
             <!--Deuxième section de l'accueil-->
-             <div class="section2">
-                     <div class="background">
-                        <div class="image-box">
-                           <img src="./Images/Accueil/Pantherhome2.png" alt="" class="image2">
+            <div class="section2">
+                  <div class="grid">
+                        <div class="image2">
+                           <img src="./Images/Accueil/Pantherhome2.png" alt="">
                         </div>
                         <div class="section2-text">
                               <h3>KILLMONGER</h3>
-                              <p class="text">La sauvagerie de N'Jadaka alors qu'il servait dans une
+                              <p>La sauvagerie de N'Jadaka alors qu'il servait dans une
                                 unité d'opérations noires de l'armée américaine lui a
                                 valu le surnom de Killmonger. D’origine Wakandaise,
                                 et se sentant abandoné par sa nation, il cherche à
                                 détroner T’Challa dans une quête vers le pourvoir. <br>
+                                <a class="lien" href="#">Voir plus></a>
                               </p>  
-                              <a class="lien" href="#">Voir plus></a>
                         </div>
-                        <div class="image-box">
-                             <img src="./Images/Accueil/Pantherhome3.png" alt="" class="image3">
+                        <div clclass="image3">
+                             <img src="./Images/Accueil/Pantherhome3.png" alt="">
                         </div>
                         <div class="section2-text">
                               <h3>OKOYE</h3>
-                              <p class="text">Okoye est le général des Dora Milaje (groupe d’élite
+                              <p>Okoye est le général des Dora Milaje (groupe d’élite
                                 de femmes guerrières) et le chef des forces armées et
                                 des renseignements wakandais. Témoin du
                                 couronnement de T'Challa, elle se joint à lui dans de
                                 nombreuses aventures. <br>
+                                <a class="lien" href="#">Voir plus></a>
                              </p>
-                             <a class="lien" href="#">Voir plus></a>
                         </div>
-                        <div class="image-box">
-                             <img src="./Images/Accueil/Pantherhome4.png" alt="" class="image4">
+                        <div class="image4">
+                             <img src="./Images/Accueil/Pantherhome4.png" alt="">
                         </div>
-                   </div>
-             </div> 
+                  </div>
+            </div> 
            
              <!--Troisième section de l'accueil-->
       
