Projet Black Panther

--- a/accueil.html
+++ b/accueil.html
@@ -10,9 +10,11 @@
    <body>
         <header>
             <nav class="header">
-              <a href="accueil.html">
-                <img src="./Images/All_pages/footer2.png" alt="Logo">
-              </a>
+               <div class="logo">
+                  <a href="accueil.html">
+                     <img src="./Images/All_pages/footer2.png" alt="Logo">
+                  </a>
+               </div>     
               <ul class="menu">
                 <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="wakanda.html">Wakanda</a></li>
@@ -211,8 +213,8 @@
                      <div class="footer-content">
                          <div class="pages">
                             <h2>P A G E S</h2>
-                            <p>à propos <br>
-                               Wakanda</p>
+                            <p><a href="accueil.html">à propos</a></p>
+                            <p><a href="wakanda.html">Wakanda</a></p>
                          </div>
                          <div class="social-media-footer">
                             <h2>R E T R O U V E Z N O U S</h2>
