--- a/wakanda.html
+++ b/wakanda.html
@@ -189,8 +189,8 @@
                <div class="footer-content">
                    <div class="pages">
                       <h2>P A G E S</h2>
-                      <p>à propos <br>
-                         Wakanda</p>
+                      <p><a href="wakanda.html">à propos</a></p>
+                      <p><a href="wakanda.html">Wakanda</a></p>
                    </div>
                    <div class="social-media-footer">
                       <h2>R E T R O U V E Z N O U S</h2>
