--- a/enigme.html
+++ b/enigme.html
@@ -45,12 +45,12 @@
                     PEU IMPORTE QUI MONTE DESSUS ”</h2>
                 
                 <h3>Voici la transicription de l’alphabet :</h3>
-                <p>
-                    A = A ; B = b ; c = c ; d = d ; e = e ; f = f ; g = g ; h = h ; i = i ; j = j ; 
+                <p class="declaration">
+                   <span>A = A;</span> <span>B = b;</span> <span>c = c;</span> <span>d = d;</span>  <span>e = e;</span>  <span>f = f</span> <span>g = g;</span> <span>h = h;</span> <span>i = i;</span> <span>j = j;</span> 
 
-                    k = k ; l = l ; m = m ; n = n ; o = o ; p = p ; q = q ; r = r ; s = s ; t = t ;
+                   <span>k = k;</span> <span>l = l;</span> <span>m = m;</span> <span>n = n;</span> <span>o = o;</span> <span>p = p;</span> <span>q = q;</span>  <span>r = r;</span> <span>s = s;</span> <span>t = t;</span>
 
-                    u = u ; w = w ; x = x ; y = y ; z = z
+                   <span>u = u;</span> <span>w = w;</span> <span>x = x;</span> <span>y = y;</span> <span>z = z;</span>
                 </p>
                 <div class="my-form">
                   <h3>Alors, as tu la réponse ?</h3>
@@ -83,8 +83,8 @@
                   <div class="footer-content">
                       <div class="pages">
                          <h2>P A G E S</h2>
-                         <p>à propos <br>
-                            Wakanda</p>
+                         <p><a href="enigme.html">à propos</a></p>
+                         <p><a href="wakanda.html">Wakanda</a></p>
                       </div>
                       <div class="social-media-footer">
                          <h2>R E T R O U V E Z N O U S</h2>
