Projet Black Panther

--- a/enigme.html
+++ b/enigme.html
@@ -45,12 +45,12 @@
                     PEU IMPORTE QUI MONTE DESSUS ”</h2>
                 
                 <h3>Voici la transicription de l’alphabet :</h3>
-                <p class="declaration">
-                   <span>A = A;</span> <span>B = b;</span> <span>c = c;</span> <span>d = d;</span>  <span>e = e;</span>  <span>f = f</span> <span>g = g;</span> <span>h = h;</span> <span>i = i;</span> <span>j = j;</span> 
+                <p>
+                   A = <span>A</span> ; B = <span>b</span> ; C = <span>c</span> ; D = <span>d</span> ; E = <span>e</span> ; F = <span>f</span>; G = <span>g</span> ; H = <span>h</span> ; I = <span>i</span>; J = <span>j</span>; 
 
-                   <span>k = k;</span> <span>l = l;</span> <span>m = m;</span> <span>n = n;</span> <span>o = o;</span> <span>p = p;</span> <span>q = q;</span>  <span>r = r;</span> <span>s = s;</span> <span>t = t;</span>
+                   k = <span>K</span>; L = <span>l</span>; M = <span>m</span>; N = <span>n</span>; O = <span>o</span>; P = <span>p</span>; Q = <span>q</span>; R = <span>r</span>; S = <span>s</span>; T = <span>t</span>;
 
-                   <span>u = u;</span> <span>w = w;</span> <span>x = x;</span> <span>y = y;</span> <span>z = z;</span>
+                   U = <span>u</span>; W = <span>w</span>; X = <span>x</span>; Y = <span>y</span>; Z = <span>z</span>;
                 </p>
                 <div class="my-form">
                   <h3>Alors, as tu la réponse ?</h3>
